# 2021Q4

./: .gitignore  README.md
canvas/flowParticles/: app.js  index.html  styles.css
flutter_meal_app/: .gitignore  README.md  pubspec.yaml
flutter_meal_app/android/app/: build.gradle
flutter_meal_app/ios/Runner/: Info.plist
flutter_meal_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_meal_app/lib/: main.dart
flutter_meal_app/lib/components/: category_item.dart  main_drawer.dart  meal_item.dart
flutter_meal_app/lib/config/: palette.dart
flutter_meal_app/lib/models/: category.dart  meal.dart
flutter_meal_app/lib/screens/: categories_screen.dart  favorites_screen.dart  filter_screen.dart  meals_screen.dart  recipe_screen.dart  tabs_screen.dart
flutter_meal_app/linux/: CMakeLists.txt  my_application.cc
flutter_meal_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_meal_app/web/: index.html  manifest.json
flutter_meal_app/windows/: CMakeLists.txt
flutter_meal_app/windows/runner/: Runner.rc  main.cpp
general/: PROCESS_VS_THREADS.md
minesweeper/: package.json
minesweeper/public/: index.html
minesweeper/src/: app.js  constants.js  gameState.js
platformer/: package.json
platformer/src/: config.js  index.html  main.js
platformer/src/entities/: Hero.js
platformer/src/scenes/: Game.js
rust/: COMMON_CONCEPTS.md
rust/advent2021/day_01_b/: Cargo.toml
rust/mandelbrot/: Cargo.toml
rust/news_cli/: Cargo.toml
rust/news_cli/newsapi/: Cargo.toml
rust/news_cli/newsapi/src/: lib.rs
rust/news_cli/src/: main.rs  theme.rs
(+13 files in other folders)
