[package]
name = "news_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq="2.2.0"
colour = "0.6.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
dotenv = "0.15.0"